@@ -1,3 +1,5 @@
+- Refactor: Create domain entity RegistrationStateType
+
 40.0.0 (23-11-2022)
 - Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum
 - Refactor: Remove RegistrationStateType
